--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
     <section id="footer">
 
-        <div class="row">
+        <div class="row foot">
             <div class="col-lg-4 md-3 sm-2 ftone">
                 <h3>Social Media</h3>
                 <a class="link" href=""> <i class="fab fa-facebook"> facebook</i><br> </a>
